# Edu-path

EDU-PATH - source code/EDU-PATH-BACKEND/: edupathapi.yaml  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  test_api.py
EDU-PATH - source code/EDU-PATH-BACKEND/app/: __init__.py  api.py  controller.py  edu-path.sqlite3  model.py
EDU-PATH - source code/EDU-PATH-FRONTEND/: README.md  index.html  package-lock.json  package.json  replit_zip_error_log.txt
EDU-PATH - source code/EDU-PATH-FRONTEND/src/: main.js
EDU-PATH - source code/EDU-PATH-FRONTEND/src/assets/: main.css
EDU-PATH - source code/EDU-PATH-FRONTEND/src/axios/: index.js
EDU-PATH - source code/EDU-PATH-FRONTEND/src/components/: Accountcreation.vue  AddStudentMarks.vue  AdminAddCourse.vue  AdminAddInstructor.vue  AdminAddStudent.vue  AdminAddStudentCourse.vue  AdminLogin.vue  InstructorDashboard.vue  InstructorStatistics.vue  Login.vue  Notification.vue  StudentCoursefeedback.vue  StudentCourses.vue  StudentDashboard.vue  StudentFeedback.vue  StudentRecommendation.vue
EDU-PATH - source code/EDU-PATH-FRONTEND/src/router/: index.js
